<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_toStartOf="@+id/eye_button"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@id/title"
        android:layout_toStartOf="@+id/eye_button"
        android:layout_alignParentStart="true"/>

    <ImageButton
        android:id="@+id/eye_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/glance"
        android:src="@drawable/ic_eye_24"
        app:tint="@color/color_primary"
        android:padding="10dp"
        android:focusable="false"
        android:background="@null"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>