<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/color_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="10dp"
                android:background="@drawable/circle_corner_button"
                android:src="@drawable/ic_setting" />
            <mm.pndaza.tipitakapali.view.UniTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingTitle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_copy"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="10dp"
                android:background="@drawable/circle_corner_button"
                android:src="@drawable/ic_copy" />
            <mm.pndaza.tipitakapali.view.UniTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_copy"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_bookmark"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="10dp"
                android:background="@drawable/circle_corner_button"
                android:src="@drawable/ic_addbookmark" />
            <mm.pndaza.tipitakapali.view.UniTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_bookmark"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_explanation"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="10dp"
                android:background="@drawable/circle_corner_button"
                android:src="@drawable/ic_two_arrows" />
            <mm.pndaza.tipitakapali.view.UniTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_exp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_nsy"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="10dp"
                android:background="@drawable/circle_corner_button"
                android:src="@drawable/icon_nsy_book" />
            <mm.pndaza.tipitakapali.view.UniTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nsy"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_mm_tran"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="10dp"
                android:background="@drawable/circle_corner_button"
                android:src="@drawable/ic_mm_tran" />
            <mm.pndaza.tipitakapali.view.UniTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_mm_tran"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_toc"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="10dp"
                android:background="@drawable/circle_corner_button"
                android:src="@drawable/icon_toc" />
            <mm.pndaza.tipitakapali.view.UniTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_toc"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>